--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,310 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-  }
+	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+	"version": 1,
+	"newProjectRoot": "projects",
+	"projects": {
+		"partener1": {
+			"projectType": "application",
+			"schematics": {},
+			"root": "projects/partener1",
+			"sourceRoot": "projects/partener1/src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "ngx-build-plus:browser",
+					"options": {
+						"outputPath": "dist/partener1",
+						"index": "projects/partener1/src/index.html",
+						"main": "projects/partener1/src/main.ts",
+						"polyfills": [
+							"zone.js"
+						],
+						"tsConfig": "projects/partener1/tsconfig.app.json",
+						"assets": [
+							"projects/partener1/src/favicon.ico",
+							"projects/partener1/src/assets"
+						],
+						"styles": [
+							"projects/partener1/src/styles.css"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "projects/partener1/webpack.config.js",
+						"commonChunk": false
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "1mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "4kb"
+								}
+							],
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/partener1/webpack.prod.config.js"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "ngx-build-plus:dev-server",
+					"configurations": {
+						"production": {
+							"browserTarget": "partener1:build:production",
+							"extraWebpackConfig": "projects/partener1/webpack.prod.config.js"
+						},
+						"development": {
+							"browserTarget": "partener1:build:development"
+						}
+					},
+					"defaultConfiguration": "development",
+					"options": {
+						"port": 4300,
+						"publicHost": "http://localhost:4300",
+						"extraWebpackConfig": "projects/partener1/webpack.config.js"
+					}
+				},
+				"extract-i18n": {
+					"builder": "ngx-build-plus:extract-i18n",
+					"options": {
+						"browserTarget": "partener1:build",
+						"extraWebpackConfig": "projects/partener1/webpack.config.js"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"polyfills": [
+							"zone.js",
+							"zone.js/testing"
+						],
+						"tsConfig": "projects/partener1/tsconfig.spec.json",
+						"assets": [
+							"projects/partener1/src/favicon.ico",
+							"projects/partener1/src/assets"
+						],
+						"styles": [
+							"projects/partener1/src/styles.css"
+						],
+						"scripts": []
+					}
+				}
+			}
+		},
+		"theme-manager": {
+			"projectType": "application",
+			"schematics": {},
+			"root": "projects/theme-manager",
+			"sourceRoot": "projects/theme-manager/src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "ngx-build-plus:browser",
+					"options": {
+						"outputPath": "dist/theme-manager",
+						"index": "projects/theme-manager/src/index.html",
+						"main": "projects/theme-manager/src/main.ts",
+						"polyfills": [
+							"zone.js"
+						],
+						"tsConfig": "projects/theme-manager/tsconfig.app.json",
+						"assets": [
+							"projects/theme-manager/src/favicon.ico",
+							"projects/theme-manager/src/assets"
+						],
+						"styles": [
+							"projects/theme-manager/src/styles.css"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "projects/theme-manager/webpack.config.js",
+						"commonChunk": false
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "1mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "4kb"
+								}
+							],
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/theme-manager/webpack.prod.config.js"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "ngx-build-plus:dev-server",
+					"configurations": {
+						"production": {
+							"browserTarget": "theme-manager:build:production",
+							"extraWebpackConfig": "projects/theme-manager/webpack.prod.config.js"
+						},
+						"development": {
+							"browserTarget": "theme-manager:build:development"
+						}
+					},
+					"defaultConfiguration": "development",
+					"options": {
+						"port": 4200,
+						"publicHost": "http://localhost:4200",
+						"extraWebpackConfig": "projects/theme-manager/webpack.config.js"
+					}
+				},
+				"extract-i18n": {
+					"builder": "ngx-build-plus:extract-i18n",
+					"options": {
+						"browserTarget": "theme-manager:build",
+						"extraWebpackConfig": "projects/theme-manager/webpack.config.js"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"polyfills": [
+							"zone.js",
+							"zone.js/testing"
+						],
+						"tsConfig": "projects/theme-manager/tsconfig.spec.json",
+						"assets": [
+							"projects/theme-manager/src/favicon.ico",
+							"projects/theme-manager/src/assets"
+						],
+						"styles": [
+							"projects/theme-manager/src/styles.css"
+						],
+						"scripts": []
+					}
+				}
+			}
+		},
+		"partener2": {
+			"projectType": "application",
+			"schematics": {},
+			"root": "projects/partener2",
+			"sourceRoot": "projects/partener2/src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "ngx-build-plus:browser",
+					"options": {
+						"outputPath": "dist/partener2",
+						"index": "projects/partener2/src/index.html",
+						"main": "projects/partener2/src/main.ts",
+						"polyfills": [
+							"zone.js"
+						],
+						"tsConfig": "projects/partener2/tsconfig.app.json",
+						"assets": [
+							"projects/partener2/src/favicon.ico",
+							"projects/partener2/src/assets"
+						],
+						"styles": [
+							"projects/partener2/src/styles.css"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "projects/partener2/webpack.config.js",
+						"commonChunk": false
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "1mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "4kb"
+								}
+							],
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/partener2/webpack.prod.config.js"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "ngx-build-plus:dev-server",
+					"configurations": {
+						"production": {
+							"browserTarget": "partener2:build:production",
+							"extraWebpackConfig": "projects/partener2/webpack.prod.config.js"
+						},
+						"development": {
+							"browserTarget": "partener2:build:development"
+						}
+					},
+					"defaultConfiguration": "development",
+					"options": {
+						"port": 4400,
+						"publicHost": "http://localhost:4400",
+						"extraWebpackConfig": "projects/partener2/webpack.config.js"
+					}
+				},
+				"extract-i18n": {
+					"builder": "ngx-build-plus:extract-i18n",
+					"options": {
+						"browserTarget": "partener2:build",
+						"extraWebpackConfig": "projects/partener2/webpack.config.js"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"polyfills": [
+							"zone.js",
+							"zone.js/testing"
+						],
+						"tsConfig": "projects/partener2/tsconfig.spec.json",
+						"assets": [
+							"projects/partener2/src/favicon.ico",
+							"projects/partener2/src/assets"
+						],
+						"styles": [
+							"projects/partener2/src/styles.css"
+						],
+						"scripts": []
+					}
+				}
+			}
+		}
+	}
 }
